[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyontools"
version = "0.1.0"
description = "A placeholder for pyontools: tools to support PYON, Python Object Notation."
authors = [{name = "Ray Lutz", email = "raylutz@cognisys.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []
